# cyber-melee

./: ReadMe.md
client/: .gitignore
client/proto/: ReadMe.md  package.json
client/proto/csv/: CharacterDataTable.csv  EOTKindEnum.csv  EOTTriggerFireTypeEnum.csv  EOTTriggerStruct.csv  EOTTypeEnum.csv  EffectOverTimeDataTable.csv  GameResultTypeEnum.csv  OrbitMapDataTable.csv  ProjectileDataTable.csv  ProjectileTypeEnum.csv  SkillAffectTypeEnum.csv  SkillDataTable.csv  SkillTypeEnum.csv  StatPropStruct.csv  StatPropTypeEnum.csv  StatPropValueTypeEnum.csv
client/proto/scripts/: BuildFlat.ts  GenerateCode.ts  GenerateJson.ts  Initialize.ts  RunBuildFlat.ts
client/unity/: ReadMe.md  sync_debug_copy
client/unity/Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
client/unity/Assets/Resources/: Splash.prefab  (+2 more)
client/unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
client/unity/Tools/: build.py
docker/: .gitignore  config.env  deploy-client.sh  deploy-server.sh  docker-compose.yml  sync-services.sh
docker/nginx/conf.d/: http-server.conf  ws-server.conf
fbs/: Battle.fbs  build_fbs.sh
fbs/flatc/: flatc
server/ping-tool/: .gitignore  Cargo.toml  ping-test.sh
server/ping-tool/protocols/: Cargo.toml
server/ping-tool/protocols/src/: lib.rs
server/ping-tool/src/: main.rs
server/ping-tool/src/pinus/: msg.rs  pkg.rs
server/ping-tool/src/utils/: config.rs
server/ws-server/: .env  Cargo.toml  Dockerfile  README.md
server/ws-server/src/: actor_messages.rs  main.rs  room.rs  server.rs  session.rs
(+331 files in other folders)
